update swagger data